user added cart shown in my cart

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@
 body,html{
     font-family: 'Cinzel', serif;
 };
+.drawer-side a.active {
+    color: white;
+  }
+  .drawer-side a {
+    background-color: transparent;
+  }
